# NeoStats-Research-Assistant

./: .gitignore  .gitkeep  README.md  app.py  pyproject.toml  requirements.txt
config/: config.py
models/: embeddings.py  llm.py
utils/: rag_utils.py  search_utils.py
